--- a/lib-common/src/main/res/values/strings.xml
+++ b/lib-common/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">smartCanteen</string>
+    <string name="home">首页</string>
+    <string name="user">我的</string>
+    <string name="order">订单</string>
 </resources>
